<resources>
    <string name="app_name">ChallengeMe</string>
    <string name="title_challenge">challenge</string>
    <string name="title_calender">calender</string>
    <string name="title_timeline">timeline</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="capture_button" />
    <string name="photo_view">Photo View</string>
    <string name="retake_photo">Retake Photo</string>
    <string name="timeline_image" />
</resources>