<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_challenge">

    <fragment
        android:id="@+id/navigation_challenge"
        android:name="com.example.challengeme.ui.challenge.ChallengeFragment"
        android:label="@string/title_challenge"
        tools:layout="@layout/fragment_challenge">
        <action
            android:id="@+id/action_challengeFragment_to_challengeCameraFragment"
            app:destination="@id/challengeCameraFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_calender"
        android:name="com.example.challengeme.ui.calender.CalenderFragment"
        android:label="@string/title_calender"
        tools:layout="@layout/fragment_calender" />

    <fragment
        android:id="@+id/navigation_timeline"
        android:name="com.example.challengeme.ui.timeline.TimelineFragment"
        android:label="@string/title_timeline"
        tools:layout="@layout/fragment_timeline" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.challengeme.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.challengeme.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <!--    <fragment-->
    <!--        android:id="@+id/challengeCameraFragment"-->
    <!--        android:name="com.example.challengeme.ui.challengecamera.ChallengeCameraFragment"-->
    <!--        tools:layout="@layout/fragment_challenge_camera">-->
    <!--        <action-->
    <!--            android:id="@+id/action_challengeCameraFragment_to_photoPreviewFragment"-->
    <!--            app:destination="@id/photoPreviewFragment">-->
    <!--            <argument-->
    <!--                android:name="photoPath"-->
    <!--                app:argType="string" />-->
    <!--        </action>-->
    <!--    </fragment>-->
    <fragment
        android:id="@+id/challengeCameraFragment"
        android:name="com.example.challengeme.ui.challengecamera.ChallengeCameraFragment"
        android:label="ChallengeCameraFragment">
        <action
            android:id="@+id/action_challengeCameraFragment_to_photoPreviewFragment"
            app:destination="@id/photoPreviewFragment">
            <argument
                android:name="photoPath"
                app:argType="string"
                app:nullable="false" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/timelineFragment"
        android:name="com.example.challengeme.ui.timeline.TimelineFragment"/>

    <!--    <fragment-->
    <!--        android:id="@+id/photoPreviewFragment"-->
    <!--        android:name="com.example.challengeme.ui.challengecamera.PhotoPreviewFragment"-->
    <!--        android:label="photo_preview_fragment"-->
    <!--        tools:layout="@layout/fragment_photo_preview"/>-->
    <!--    <action-->
    <!--        android:id="@+id/action_photoPreviewFragment_to_challengeCameraFragment"-->
    <!--        app:destination="@id/challengeCameraFragment" />-->

    <fragment
        android:id="@+id/photoPreviewFragment"
        android:name="com.example.challengeme.ui.challengecamera.PhotoPreviewFragment"
        android:label="PhotoPreviewFragment">
        <argument
            android:name="photoPath"
            app:argType="string"
            app:nullable="false" />
        <action
            android:id="@+id/action_photoPreviewFragment_to_challengeFragment"
            app:destination="@id/navigation_challenge" />
    </fragment>
</navigation>